# agentos

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  GEMINI.md  README.md  completion_review.md  improve-plan.md  plan.md
.agents/: skill_repairs.tsv  skill_routes.tsv
.agents/skills/00-understand-system/: SKILL.md
.agents/skills/01-grill-requirements/: SKILL.md
.agents/skills/02-spec-freeze/: SKILL.md
.agents/skills/03-impact-analysis/: SKILL.md
.agents/skills/04-task-slice/: SKILL.md
.agents/skills/05-goal-pack/: SKILL.md
.agents/skills/06-codex-controller/: SKILL.md
.agents/skills/07-verify-loop/: SKILL.md
.agents/skills/08-goal-review/: SKILL.md
.agents/skills/autonomous-dev/: SKILL.md
.agents/skills/codex-goal-dispatch/: SKILL.md
.agents/skills/subagent-roles/: SKILL.md
.github/workflows/: ci.yml
docs/: ADR-JSON-001.md  ADR-STORAGE-001.md  AGENT_SYSTEM.md  ARCHITECTURE.md  ARCH_ALIGNMENT.md  AUTH_DESIGN.md  AUTH_PRD.md  AUTODEV.md  AUTODEV_COOKBOOK.md  CANCELLATION.md  CLI_INTEGRATION.md  CODING_GUIDE.md  INTERACTION_TEST_MATRIX.md  MAIN_REPL.md  MAIN_REPL_ROUTING_REFACTOR_PLAN.md  MAIN_REPL_ROUTING_STATUS.md  MEMORY_EVOLUTION.md  MERGE_SUMMARY.md  PRD.md  ROADMAP.md  SKILL_SYSTEM.md  V2_ADAPTER_INTERFACE.md
docs/adr/: 0001-autodev-runtime-store-ownership.md
docs/goals/: G001-agent-dispatch-seam.md  G002-agent-dispatch-callers.md  G003-decomposition-dispatch.md  G004-repl-dispatch.md  G005-capability-contract-facade.md  G006-contract-callers.md  G007-learn-skill-capability-declaration.md  G008-route-hints.md  G009-plugin-protocol-output.md  G010-plugin-session-policy.md  G011-runtime-store-backend-seam.md  G012-storage-commands-backend.md  G013-audit-history-recovery.md  G014-auth-login-flow-modules.md  G015-auth-profile-strategy.md  G016-provider-oauth-watch.md  G017-domain-docs-maintenance.md  README.md  backlog.md  decision-log.md  overnight-report.md  overnight.md  verification.md
docs/schemas/: AUTODEV_SPEC.schema.json
docs/skills/: maxenergy-skills-integration.md
examples/generated_skills/github-site/: SKILL.md
examples/generated_skills/google-search/: SKILL.md
examples/submariner_clock_server/: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/auth/: auth_login_flow.cpp  auth_login_flow.hpp  auth_manager.cpp  auth_manager.hpp  auth_models.cpp  auth_models.hpp  auth_profile_store.cpp  auth_profile_store.hpp  auth_provider_adapter.hpp  credential_broker.cpp  credential_broker.hpp  oauth_pkce.cpp  oauth_pkce.hpp  provider_adapters.cpp  provider_adapters.hpp  secure_token_store.cpp  secure_token_store.hpp  session_store.cpp  session_store.hpp
src/autodev/: autodev_execution_adapter.cpp  autodev_execution_adapter.hpp  autodev_job_id.cpp  autodev_job_id.hpp  autodev_models.cpp  autodev_models.hpp  autodev_skill_pack_loader.cpp  autodev_skill_pack_loader.hpp  autodev_state_store.cpp  autodev_state_store.hpp
src/cli/: agents_commands.cpp  agents_commands.hpp  auth_commands.cpp  auth_commands.hpp  auth_interactive.cpp  auth_interactive.hpp  autodev_commands.cpp  autodev_commands.hpp  cli_specs_commands.cpp  cli_specs_commands.hpp  diagnostics_commands.cpp  diagnostics_commands.hpp  intent_classifier.cpp  intent_classifier.hpp  interactive_chat_state.cpp  interactive_chat_state.hpp  interactive_commands.cpp  interactive_commands.hpp  interactive_intent_registry.cpp  interactive_intent_registry.hpp  interactive_main_context.cpp  interactive_main_context.hpp  interactive_route_action_executor.cpp  interactive_route_action_executor.hpp  interactive_route_policy.cpp  interactive_route_policy.hpp  main_agent_commands.cpp  main_agent_commands.hpp  main_route_action.cpp  main_route_action.hpp  memory_commands.cpp  memory_commands.hpp  plugins_commands.cpp  plugins_commands.hpp  schedule_commands.cpp  schedule_commands.hpp  serve_commands.cpp  serve_commands.hpp  skill_reload.cpp  skill_reload.hpp  (+6 more)
src/core/: models.hpp
src/memory/: lesson_hints.cpp  lesson_hints.hpp  lesson_store.cpp  lesson_store.hpp  memory_manager.cpp  memory_manager.hpp  workflow_store.cpp  workflow_store.hpp  workflow_validation.cpp  workflow_validation.hpp
src/scheduler/: cron.cpp  cron.hpp  scheduler.cpp  scheduler.hpp  timezone.cpp  timezone.hpp
src/storage/: main_agent_store.cpp  main_agent_store.hpp  storage_backend.cpp  storage_backend.hpp  storage_export.cpp  storage_export.hpp  storage_policy.cpp  storage_policy.hpp  storage_transaction.cpp  storage_transaction.hpp  storage_version_store.cpp  storage_version_store.hpp
src/trust/: allowlist_store.cpp  allowlist_store.hpp  identity_manager.cpp  identity_manager.hpp  pairing_invite_store.cpp  pairing_invite_store.hpp  pairing_manager.cpp  pairing_manager.hpp  trust_models.cpp  trust_models.hpp  trust_policy.cpp  trust_policy.hpp
src/utils/: atomic_file.cpp  atomic_file.hpp  cancellation.cpp  cancellation.hpp  command_utils.cpp  command_utils.hpp  curl_secret.cpp  curl_secret.hpp  json_utils.cpp  json_utils.hpp  path_utils.cpp  path_utils.hpp  secret_redaction.cpp  secret_redaction.hpp  secure_random.cpp  secure_random.hpp  sha256.cpp  sha256.hpp  signal_cancellation.cpp  signal_cancellation.hpp  spec_parsing.cpp  spec_parsing.hpp
tests/: agent_dispatch_tests.cpp  agent_provider_tests.cpp  auth_tests.cpp  autodev_tests.cpp  cancellation_tests.cpp  chat_fallback_tests.cpp  cli_integration_tests.cpp  cli_plugin_tests.cpp  core_smoke_tests.cpp  file_skill_policy_tests.cpp  host_info_skill_tests.cpp  intent_classifier_tests.cpp  interactive_chat_state_tests.cpp  learn_skill_tests.cpp  main_agent_prompt_tests.cpp  main_route_action_tests.cpp  news_search_skill_tests.cpp  policy_trust_tests.cpp  research_development_skill_tests.cpp  routing_eval_tests.cpp  scheduler_tests.cpp  spec_parsing_tests.cpp  storage_tests.cpp  subagent_session_tests.cpp  task_wait_policy_tests.cpp  test_command_fixtures.hpp  workflow_router_tests.cpp
tests/fixtures/: routing_cases.jsonl
tools/: install_maxenergy_skills.sh  opencli.ps1  opencli_setup.ps1  xiaohongshu_opencli.ps1
(+113 files in other folders)
